--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
  <parent>
   <groupId>org.springframework.boot</groupId>
   <artifactId>spring-boot-starter-parent</artifactId>
-  <version>2.0.2.RELEASE</version>
+  <version>2.3.0.RELEASE</version>
   <relativePath />
  </parent>
  <dependencies>
@@ -27,4 +27,7 @@
    <scope>test</scope>
   </dependency>
  </dependencies>
+ <modules>
+  <module>integration-cache</module>
+ </modules>
 </project>
