--- a/pom.xml
+++ b/pom.xml
@@ -32,4 +32,20 @@
   <module>integration-cache</module>
   <module>spring-email</module>
  </modules>
+ <build>
+  <plugins>
+   <!-- maven not run test -->
+   <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.22.0</version>
+   </plugin>
+   <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-failsafe-plugin</artifactId>
+    <version>2.22.0</version>
+   </plugin>
+   <!-- maven not run test -->
+  </plugins>
+ </build>
 </project>
