--- a/integration-cache/spring-boot-cache-with-redis/src/main/resources/application.properties
+++ b/integration-cache/spring-boot-cache-with-redis/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
 # Connection details
-#spring.redis.host=localhost
-#spring.redis.port=6379
+spring.redis.host=172.16.10.177
+spring.redis.port=26379
